# base-env-poetry

./: README.md
poetry-demo/: README.md  pyproject.toml  requirements.txt
